# sepals

./: .gitignore  CITATION.bib  CITATION.cff  LICENSE  NOTICE  README.md  pyproject.toml
benchmarks/: bench_backends.py
scripts/: make_readme_plots.py
src/sepals/: __init__.py  _als_kernels.py  _mps_backend.py  als.py  datasets.py  plotting.py
tests/: test_als_kernels.py  test_mps_backend.py  test_plotting.py  test_regressor.py  test_sklearn_compat.py  test_sparse_tent_reference.py
